CSS fix for youtube videos on mobile - NOTE means all future youtube vids need a div with class video-container wrapped round them...

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,3 +57,19 @@
   @apply (--font-uppercase);
   font-size: var(--font-size-sm);
 }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
